try taxon name resolution function

--- a/notebooks/ictv.ipynb
+++ b/notebooks/ictv.ipynb
@@ -272,6 +272,26 @@
    "id": "a0e14644",
    "metadata": {},
    "source": [
+    "#### ... and what the following former taxon name can resolve into the latest MSL release"
+   ]
+  },
+ {
+  "cell_type": "code",
+  "execution_count": null,
+  "metadata": {},
+  "outputs": [],
+  "source": [
+   "from ictv_ols import ICTVOLSClient\n",
+   "client = ICTVOLSClient(\"https://www.ebi.ac.uk/ols4/api/ontologies/ictv\")\n",
+   "result = client.get_taxon_by_label_or_synonym(\"MSL40\", \"SARS-CoV\")\n",
+   "print(result)"
+  ]
+ },
+  {
+   "cell_type": "markdown",
+   "id": "a0e14644",
+   "metadata": {},
+   "source": [
     "#### ... and what else was Cytorhabdovirus split into?"
    ]
   },
